
add_subdirectory(src)

if(WIN32)
  message(STATUS "FIXME: install a bat file here instead of opsc.sh")
  install(FILES opsc.sh DESTINATION ${OPS_JAR_REL_INSTALL_PATH}
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE 
    )
else()
  install(FILES opsc.sh DESTINATION ${OPS_JAR_REL_INSTALL_PATH}
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE 
    )
endif()
